# unconvector

./: BaseConverter.cpp  BaseConverter.h  BigFraction.cpp  BigFraction.h  BigInteger.cpp  BigInteger.h  CMakeLists.txt  Formatter.cpp  Formatter.h  Parser.cpp  Parser.h  README.md  ResultWindow.cpp  ResultWindow.h  input.txt  main.cpp  mainwindow.cpp  mainwindow.h  test.h
